# retina

./: .gitignore  COMMIT_README.md  Cargo.toml  INSTALL.md  README.md  subscription.yml
.github/workflows/: ci.yml  rustdoc.yml
build_data/: custom.rs  custom_cfgs.yml  custom_defs.rs  grammar.yml
configs/: online.toml  sample-config.toml
core/: Cargo.toml  build.rs
core/src/: config.rs  lib.rs
core/src/conntrack/: conn_id.rs  mod.rs  pdu.rs  receiver.rs  tests.rs  timerwheel.rs
core/src/conntrack/conn/: conn_actions.rs  conn_info.rs  conn_layers.rs  conn_state.rs  mod.rs  regex.rs
core/src/dpdk/: mod.rs
core/src/filter/: actions.rs  ast.rs  datatypes.rs  grammar.pest  macros.rs  mod.rs  parser.rs  pattern.rs  pkt_ptree.rs  pred_ptree.rs  ptree.rs  ptree_flat.rs  subscription.rs
core/src/filter/hardware/: flow_action.rs  flow_item.rs  flow_runtime.rs  mod.rs
core/src/lcore/: monitor.rs  rx_core.rs
core/src/memory/: mbuf.rs
core/src/multicore/: channel_dispatcher.rs  dedicated_worker.rs  shared_worker.rs  subscription_stats.rs
core/src/protocols/stream/: mod.rs
core/src/runtime/: mod.rs  offline.rs  online.rs
core/src/subscription/: callback.rs  chunk.rs  connection.rs  connection_frame.rs  connection_pdu.rs  custom.rs  data.rs  dns_transaction.rs  filter.rs  frame.rs  http_transaction.rs  mod.rs  quic_stream.rs  session_conn.rs  timer.rs  tls_connection.rs  tls_handshake.rs  wrappers.rs  zc_frame.rs
core/src/subscription/custom/: custom_application.rs  custom_connection.rs  custom_frame.rs  mod.rs
core/src/timing/: macros.rs  timer.rs
datatypes/: Cargo.toml  data.txt
datatypes/src/: conn_fts.rs  connection.rs  dns_transaction.rs  http_transaction.rs  lib.rs  packet.rs  packet_list.rs  quic_stream.rs  ssh_handshake.rs  static_type.rs  tls_handshake.rs  typedefs.rs
examples/app_classifier/: Cargo.toml  README.md  data.txt
examples/app_classifier/src/: features.rs
examples/basic/: Cargo.toml  generate.py  get_zeroloss.py  run.py  tls_snis.txt
examples/basic/src/: main.rs
examples/basic_2/: Cargo.toml
examples/basic_2/src/: main.rs
examples/basic_custom/: Cargo.toml
examples/basic_custom/src/: main.rs
examples/basic_dispatching/: README.md
examples/benchmark/: Cargo.toml  filter_strs.txt  generate.py  get_zeroloss.py  run.py
examples/benchmark/src/: main.rs
examples/client_randoms/src/: main.rs
examples/enc_conns/: Cargo.toml  exp.rs
examples/enc_conns/src/: main.rs
examples/filter_stats/src/: main.rs
examples/ip_anon/src/: main.rs
examples/log_chunk/: Cargo.toml
examples/log_chunk/src/: main.rs
examples/log_dns/src/: main.rs
examples/log_http/src/: main.rs
examples/log_ssh/src/: main.rs
examples/log_tls/src/: main.rs
examples/measuring_sec/: Cargo.toml
examples/measuring_sec/src/: main.rs
examples/ml_qos/: Cargo.toml  data.txt  snis.txt
examples/ml_qos/src/: features.rs
examples/pcap_dump/: Cargo.toml  exp.rs
examples/pcap_dump/src/: main.rs
examples/pcap_dump_filtered/: Cargo.toml
examples/pcap_dump_filtered/src/: main.rs
examples/proto_counts/src/: main.rs
examples/protocols/src/: main.rs
examples/re_matcher/: Cargo.toml
examples/re_matcher/src/: main.rs
examples/regex_matcher/: Cargo.toml  subscription.yml
examples/regex_matcher/src/: main.rs
examples/spin/: Cargo.toml
examples/spin/src/: main.rs
examples/spin_filter/: Cargo.toml  filterstrgen.py
examples/spin_filter/src/: main.rs
examples/spin_filtered/: Cargo.toml
examples/spin_filtered/src/: main.rs
examples/test_entropy/: Cargo.toml  exp.rs
examples/test_entropy/src/: main.rs
examples/websites_2/src/: main.rs
exp_scripts/: build_yml.py  build_yml_ipv4.py  generate.py  get_zeroloss.py  run.py  run_exp.py  subscription-cpy-ipv4.yml  subscription-cpy.yml
exp_scripts_old/: run_exp.py
filtergen/: Cargo.toml
filtergen/src/: cache.rs  codegen.rs  connection_filter.rs  data.rs  datatypes.rs  lib.rs  old_lib.rs  packet_filter.rs  parse.rs  ptree.rs  session_filter.rs  state_filters.rs  subscription.rs  util.rs
subscriptiongen/src/: builder.rs  lib.rs
subscriptiongen/src/prototypes/: connection.rs  http.rs  mod.rs  tls.rs  utils.rs
tests/functionality/: script.py  test_config.toml
tests/functionality/basic_test/: Cargo.toml  expected_output_basic.json
traces/: tls_single_flow.pcap
(+16 files in other folders)
