[package]
name = "retina-datatypes"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
retina-core = { path = "../core" }
quote = "1.0.26"
proc-macro2 = "1.0.56"
syn = { version = "2.0.15" }
serde = { version = "1.0", features = ["derive"] }
pnet = "0.33.0"
retina-filtergen = { path = "../filtergen" }

[features]
# skip applying the datatype code generation macros, which
# cache results in the output file
# turn off if anything in the crate changes
skip_expand = []
default = ["skip_expand"]