[package]
name = "retina-filtergen"
version = "1.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.3.3"
proc-macro2 = "1.0.56"
quote = "1.0.26"
regex = "1.7.3"
retina-core = { path = "../core", default-features = false }
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
serde_with = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
toml = "0.5.11"
lazy_static = "1.4.0"
memchr = "2.7.4"
anyhow = "1.0.70"
thiserror = "1.0"
strum = "0.20"