[package]
name = "app_classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
clap = { version = "3.1.8", features = ["derive"] }
env_logger = "0.8.3"
jsonl = "4.0.1"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["release_max_level_info"] }
regex = "1.5.4"
retina-core = { path = "../../core" }
retina-filtergen = { path = "../../filtergen" }
retina-datatypes = { path = "../../datatypes" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
smartcore = { git = "https://github.com/smartcorelib/smartcore", features = ["datasets"] }
bincode = "1.3.3"