[package]
name = "ml_qos"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.8.4"
retina-core = { path = "../../core" }
retina-filtergen = { path = "../../filtergen" }
retina-datatypes = { path = "../../datatypes" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.7.3"
clap = { version = "3.2.23", features = ["derive"] }
welford = "0.1.0"
serde_json = "1.0.59"
smartcore = { git = "https://github.com/smartcorelib/smartcore", features = ["datasets"] }
bincode = "1.3.3"
csv = "1.2.1"
anyhow = "1.0.40"