[package]
name = "spin_filtered"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "3.2.23", features = ["derive"] }
env_logger = "0.8.4"
log = { version = "0.4", features = ["release_max_level_info"] }
retina-core = { path = "../../core" }
retina-filtergen = { path = "../../filtergen" }
